# parallel-parrot

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  example_fine_tuning_jsonl.py  example_generate_data.py  example_generate_text.py  pyproject.toml  requirements.txt  test.py  test_fine_tuning_jsonl.py  test_functions.py  test_generate_data.py  test_generate_text.py  test_json.py
.github/workflows/: flake8.yml  poetry_pytest.yml  pytest.yml
parallel_parrot/: __init__.py  async_util.py  core.py  format_openai_fine_tuning.py  openai.py  openai_api.py  openai_api_lib.py  openai_data_interface.py  openai_output.py  openai_util.py  parrot.py  prompt_templates.py  types.py  util.py  util_async.py  util_dictlist.py  util_pandas.py  util_template.py
parallel_parrot/llm_apis/: openai_api.py
tests/: test_async_util.py  test_openai.py  test_openai_api.py  test_openai_api_lib.py  test_openai_util.py  test_run_async.py  test_util.py  test_util_async.py  test_util_dictlist.py  test_util_pandas.py  test_util_template.py
