[tool.poetry]
name = "parallel-parrot"
version = "0.1.0"
description = "A library for easily and efficiently using LLMs on tabular data"
authors = ["Brad Ito <phlogisticfugu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"
aiohttp-retry = "^2.8.3"
pandas = { version = "*", optional = true }
pydantic = "^2.3.0"
tiktoken = "^0.4.0"
uvloop = { version = "^0.17.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }

[tool.poetry.group.dev.dependencies]
aioresponses = { git = "https://github.com/pnuckowski/aioresponses.git", rev = "b444d724fd1d5b5db0a706960381bcffe2e44f7d" }
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.1"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
