[tool.poetry]
name = "parallel-parrot"
version = "0.8.2"
description = "A library for easily and quickly using LLMs on tabular data"
authors = ["Brad Ito <phlogisticfugu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "parallel_parrot"}]
repository = "https://github.com/novex-ai/parallel-parrot"
keywords = ["generative ai", "pandas", "llm", "parallel", "openai"]

[tool.poetry.urls]
Changelog = "https://github.com/novex-ai/parallel-parrot/releases"
Issues = "https://github.com/novex-ai/parallel-parrot/issues"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = [
    { version = "^3.8.6", python = "<3.12" },
    { version = "3.9.0b1", python = "3.12.*" }
]
aiohttp-retry = "^2.8.3"
pandas = { version = "^1.0 || ^2.0", optional = true }
tiktoken = "^0.5.1"
dataclass-utils = "^0.7.23"
asyncio-anywhere = "^0.2.0"

[tool.poetry.group.dev.dependencies]
aioresponses = { git = "https://github.com/pnuckowski/aioresponses.git", rev = "b444d724fd1d5b5db0a706960381bcffe2e44f7d" }
black = "^23.7.0"
flake8 = "^5.0.4"
pytest = "^7.4.1"
mypy = "^1.6.1"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
